--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ body {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: #f6940051;
+  background-image: url("../imgs/GoBusCopy.jpg");
+  background-position: center;
+  background-size: cover;
 }
 .control-buttons span {
   position: absolute;
@@ -99,4 +101,11 @@ body {
   opacity: 0;
   transform: scale(0);
   transition: 0.6s ease opacity, 0.6s ease transform;
+}
+.success-panel{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
 }
