--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-image: url("../imgs/GoBusCopy.jpg");
+  background-image: url("/imgs/GoBusCopy.jpg");
   background-position: center;
   background-size: cover;
 }
