--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-image: url("imgs/GoBusCopy.jpg");
+  background-image: url("/imgs/GoBusCopy.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -102,10 +102,22 @@ body {
   transform: scale(0);
   transition: 0.6s ease opacity, 0.6s ease transform;
 }
-.success-panel{
+.success-panel {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
+}
+#my-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 100000;
+  visibility: hidden;
+}
+#my-canvas.active {
+  visibility: visible;
 }
