--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,37 @@ body {
   background-position: center;
   background-size: cover;
 }
-.control-buttons span {
+.control-buttons form {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.control-buttons form input {
+  width: 400px;
+  height: 50px;
+  margin-bottom: 20px;
+  text-align: center;
+  background-color: #fff;
+  border: none;
+}
+.control-buttons form button {
+  width: 400px;
+  height: 70px;
+  background-color: #0c8731;
+  color: #fff;
+  padding: 15px 25px;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 6px;
+  cursor: pointer;
+  border: none;
+}
+/* .control-buttons span {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -27,7 +57,7 @@ body {
   text-align: center;
   border-radius: 6px;
   cursor: pointer;
-}
+} */
 .info-container {
   width: 1080px;
   margin: 20px auto 0;
